--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,10 @@ DOCKER_PROXY=docker.io
 # China mainland: ghcr.nju.edu.cn
 GHCR_PROXY=ghcr.io
 
+# LinkEmby version (Docker image tag)
+# Used to specify which version to deploy
+LINKEMBY_VERSION=v0.1.11
+
 # --------------------------------------------
 # Database Configuration
 # --------------------------------------------
@@ -87,7 +91,7 @@ LOG_FILE_PATH=/app/data/logs
 # Application Settings
 # --------------------------------------------
 # Order timeout in minutes
-ORDER_TIMEOUT_MINUTES=30
+ORDER_TIMEOUT_MINUTES=10
 
 # Email templates storage path
 EMAIL_TEMPLATES_PATH=/app/data/email-templates
